--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 markdown: GFM
 title: IRTG Course
-description: <h3>Introduction to R for genomics</h3>  <figure><img src="./TRR179.jpg"></figure><h4>Carl Herrmann</h4><h4>Carlos Ramirez</h4>16-17 June 2021
+description: <h3>Introduction to R for genomics</h3>  <figure><img src="./TRR179.png"></figure><h4>Carl Herrmann</h4><h4>Carlos Ramirez</h4>16-17 June 2021
