--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 markdown: GFM
 title: "SinCellTE 2022"
-description: <h3>Single-cell Epigenomics & Multi-omics integration</h3>  <figure><img src="./logo_bc2.png"></figure><h4>Carl Herrmann & Andres Quintero</h4>13 January 2022 
+description: <h3>Single-cell Epigenomics & Multi-omics integration</h3>  <figure><img src="./logo_sincell2022.png"></figure><h4>Carl Herrmann & Andres Quintero</h4>13 January 2022 
 
  
