--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 markdown: GFM
 title: "SinCellTE 2022"
-description: '<h3>Single-cell Epigenomics & Multi-omics integration</h3>  <p class="aligncenter"><figure><img src="./logo_sincell2022.png"></figure></p> <h4>Carl Herrmann & Andres Quintero</h4>13 January 2022'
+description: '<h3>Single-cell Epigenomics & Multi-omics integration</h3>  <p class="aligncenter"><figure><img src="./logo_hdsu.png"></figure></p> <h4>Carl Herrmann & Andres Quintero</h4>13 January 2022'
 
  
